--- a/fairplay.html
+++ b/fairplay.html
@@ -40,8 +40,11 @@
                 <li>
                     <a href="squadra.html">La squadra</a>
                 </li>
+                <li>
+                    <a href="form.html">Form</a>
+                </li>
                 <li id="currentLink">
-                    Il <span lang=en>fair play</span>
+                    Il <span lang="en">fair play</span>
                 </li>
             </ul>
         </nav>
