--- a/squadra.html
+++ b/squadra.html
@@ -41,7 +41,10 @@
                     La squadra
                 </li>
                 <li>
-                    <a href="fairplay.html">Il <span lang=en>fair play</span></a>
+                    <a href="form.html">Form</a>
+                </li>
+                <li>
+                    <a href="fairplay.html">Il <span lang="en">fair play</span></a>
                 </li>
             </ul>
         </nav>
