--- a/allenatore.html
+++ b/allenatore.html
@@ -42,7 +42,10 @@
                     <a href="squadra.html">La squadra</a>
                 </li>
                 <li>
-                    <a href="fairplay.html">Il <span lang=en>fair play</span></a>
+                    <a href="form.html">Form</a>
+                </li>
+                <li>
+                    <a href="fairplay.html">Il <span lang="en">fair play</span></a>
                 </li>
             </ul>
         </nav>
