--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <li>
                     <a href="squadra.html">La squadra</a>
                 </li>
+                <li><a href="form.html">Form</a></li>
                 <li>
                     <a href="fairplay.html">Il <span lang="en">fair play</span></a>
                 </li>
