--- a/form.html
+++ b/form.html
@@ -42,21 +42,21 @@
         <form action="">
             <fieldset>
                 <legend>Dati Personali</legend>
-                    <label for="nome">Nome:</label>
-                    <input name="nome" id="nome"  maxlength="12" placeholder="Nome" required="required"/>
-                    <label for="nome">Cognome:</label>
-                    <input name="cognome" id="cognome"  maxlength="12" placeholder="Cognome" required="required"/>
-                    <label for="nascita">Data di nascita:</label>
-                    <input  type="date" name="nascita" id="nascita" min="1900-01-01" max="2023-01-01" required="required"/>
-                    <label for="luogo">Luogo di nascita:</label>
-                    <input name="luogo" id="luogo"  maxlength="20" placeholder="Luogo" required="required"/>
-                    <label for="altezza">Altezza:</label>
-                    <input type="number" name="altezza" id="altezza" min="150" max="215" required="required"/>
+                    <label for="Nome">Nome:</label>
+                    <input name="nome" id="Nome"  maxlength="12" placeholder="Nome" required="required"/>
+                    <label for="Cognome">Cognome:</label>
+                    <input name="cognome" id="Cognome"  maxlength="12" placeholder="Cognome" required="required"/>
+                    <label for="Nascita">Data di nascita:</label>
+                    <input  type="date" name="nascita" id="Nascita" min="1900-01-01" max="2023-01-01" required="required"/>
+                    <label for="Luogo">Luogo di nascita:</label>
+                    <input name="luogo" id="Luogo"  maxlength="20" placeholder="Luogo" required="required"/>
+                    <label for="Altezza">Altezza:</label>
+                    <input type="number" name="altezza" id="Altezza" min="150" max="215" required="required"/>
             </fieldset>
             <fieldset>
                 <legend>Dati Professionali</legend>
-                <label for="squadra">Squadra:</label>
-                <input name="squadra" id="squadra"  maxlength="30" placeholder="Squadra" required="required"/>
+                <label for="Squadra">Squadra:</label>
+                <input name="squadra" id="Squadra"  maxlength="30" placeholder="Squadra" required="required"/>
                 <label for="Ruolo">Ruolo:</label>
                 <input  list="ruoli" name="Ruolo" id="Ruolo" placeholder="Palleggiatore" required="required"/>
                     <datalist id="ruoli">
@@ -65,15 +65,15 @@
                         <option value="Schiacciatore">
                         <option value="Alzatore"> 
                     </datalist>
-                <label for="numero">Numero di maglia:</label>
-                <input type="number" name="numero" id="numero" min="1" max="100" required="required"/>
-                <label for="punti">Punti Totali:</label>
-                <input type="number" name="punti" id="punti" min="1" max="1000" required="required"/>
+                <label for="Numero">Numero di maglia:</label>
+                <input type="number" name="Numero" id="numero" min="1" max="100" required="required"/>
+                <label for="Punti">Punti Totali:</label>
+                <input type="number" name="punti" id="Punti" min="1" max="1000" required="required"/>
             </fieldset>
             <fieldset>
                 <legend>Dati della Nazionale Italiana</legend>
-                    <label for="nazionale">Numero di maglia in nazionale:</label>
-                    <input type="number" name="nazionale" id="nazionale" min="1" max="100" required="required"/>
+                    <label for="Nazionale">Numero di maglia in nazionale:</label>
+                    <input type="number" name="Nazionale" id="nazionale" min="1" max="100" required="required"/>
                     <label>Capitano:</label>
                     <input type="radio" name="capitano" id="capitano_si" value="SI" required="required"/><label for="capitano_si">SI</label>
                     <input type="radio" name="capitano" id="capitano_no" value="NO" required="required"/><label for="capitano_no" >NO</label>
