--- a/fairplay.html
+++ b/fairplay.html
@@ -38,10 +38,10 @@
                     <a href="allenatore.html">L'allenatore</a>
                 </li>
                 <li>
-                    <a href="squadra.html">La squadra</a>
+                    <a href="squadra.php">La squadra</a>
                 </li>
                 <li>
-                    <a href="form.html">Form</a>
+                    <a href="giocatore.php">Form</a>
                 </li>
                 <li id="currentLink">
                     Il <span lang="en">fair play</span>
