--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <a href="allenatore.html">L'allenatore</a>
                 </li>
                 <li>
-                    <a href="squadra.html">La squadra</a>
+                    <a href="squadra.php">La squadra</a>
                 </li>
-                <li><a href="form.html">Form</a></li>
+                <li><a href="giocatore.php">Form</a></li>
                 <li>
                     <a href="fairplay.html">Il <span lang="en">fair play</span></a>
                 </li>
