--- a/squadra.html
+++ b/squadra.html
@@ -41,7 +41,7 @@
                     La squadra
                 </li>
                 <li>
-                    <a href="form.html">Form</a>
+                    <a href="giocatore.php">Form</a>
                 </li>
                 <li>
                     <a href="fairplay.html">Il <span lang="en">fair play</span></a>
