--- a/allenatore.html
+++ b/allenatore.html
@@ -39,10 +39,10 @@
                     L'allenatore
                 </li>
                 <li>
-                    <a href="squadra.html">La squadra</a>
+                    <a href="squadra.php">La squadra</a>
                 </li>
                 <li>
-                    <a href="form.html">Form</a>
+                    <a href="giocatore.php">Form</a>
                 </li>
                 <li>
                     <a href="fairplay.html">Il <span lang="en">fair play</span></a>
